@@ -8,41 +8,40 @@ import java.util.Collections;
 import java.util.List;
 import java.util.Set;
 import java.util.stream.Collectors;
+
 import static ytuce.gp.mfmsp.Security.user.Permission.*;
 
 
 @RequiredArgsConstructor
 public enum Role {
 
-  USER(Collections.emptySet()),
-  ADMIN(
-          Set.of(
-                  ADMIN_READ,
-                  ADMIN_UPDATE,
-                  ADMIN_DELETE,
-                  ADMIN_CREATE
-          )
-  ),
-  REPRESENTATIVE(
-          Set.of(
-                  REPRESENTATIVE_READ,
-                  REPRESENTATIVE_UPDATE,
-                  REPRESENTATIVE_DELETE,
-                  REPRESENTATIVE_CREATE
-          )
-  )
+    USER(Collections.emptySet()),
+    ADMIN(
+            Set.of(
+                    ADMIN_READ,
+                    ADMIN_UPDATE,
+                    ADMIN_DELETE,
+                    ADMIN_CREATE
+            )
+    ),
+    REPRESENTATIVE(
+            Set.of(
+                    REPRESENTATIVE_READ,
+                    REPRESENTATIVE_UPDATE,
+                    REPRESENTATIVE_DELETE,
+                    REPRESENTATIVE_CREATE
+            )
+    );
 
-  ;
+    @Getter
+    private final Set<Permission> permissions;
 
-  @Getter
-  private final Set<Permission> permissions;
-
-  public List<SimpleGrantedAuthority> getAuthorities() {
-    var authorities = getPermissions()
-            .stream()
-            .map(permission -> new SimpleGrantedAuthority(permission.getPermission()))
-            .collect(Collectors.toList());
-    authorities.add(new SimpleGrantedAuthority("ROLE_" + this.name()));
-    return authorities;
-  }
+    public List<SimpleGrantedAuthority> getAuthorities() {
+        var authorities = getPermissions()
+                .stream()
+                .map(permission -> new SimpleGrantedAuthority(permission.getPermission()))
+                .collect(Collectors.toList());
+        authorities.add(new SimpleGrantedAuthority("ROLE_" + this.name()));
+        return authorities;
+    }
 }
